<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>homework</name>
  <version>0.0.0</version>
  <description>a package for homework</description>
  <maintainer email="a.hirohara.0526@gmail.com">Akari Hirohara</maintainer>
  <license>BSD-3-Clause</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>requests</exxec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
